Subida final sin documentacion operativo

--- a/Metafar/appsettings.json
+++ b/Metafar/appsettings.json
@@ -3,7 +3,7 @@
         "Secreta": "PalabraSecreta123!ParalaEncriptacionDeTokendematafar"
     },
     "ConnectionStrings": {
-        "ConexionSql": "Server=localhost,1433;Database=Metafar;User ID=sa;Password=TuPassword123!;Trusted_Connection=False;MultipleActiveResultSets=true;TrustServerCertificate=true"
+        "ConexionSql": "Server=db,1433;Database=Metafar;User ID=sa;Password=YourStrong!Passw0rd;Trusted_Connection=False;MultipleActiveResultSets=true;TrustServerCertificate=true"
     },
     "Logging": {
         "LogLevel": {
